fix(style): Update payments product avatar/logo style to prevent overlap
Remove missed style

Add reference to issue

--- a/packages/fxa-content-server/app/styles/_variables.scss
+++ b/packages/fxa-content-server/app/styles/_variables.scss
@@ -197,6 +197,10 @@ $long-transition: $short-transition * 7;
 //Settings UI Height Hack
 $settings-ui-height: 630px;
 
+//Main Content Padding Top
+$main-content-padding-top: 82px;
+$main-content-padding-top-desktop: 70px;
+
 //Avatar Variables
 $avatar-size: 240px;
 $avatar-spinner-color: $color-grey-spinner;
